--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <script src="js/labels.js"></script>
         <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
         <script src="data/Naloxboxlocations_1.js"></script>
+        <script src="data/Narcanlocationsdeletewhendone_2.js"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -55,7 +56,7 @@
         }
         var map = L.map('map', {
             zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[42.07467676630144,-79.39668124409961],[42.15268086695975,-79.24160327564543]]);
+        }).fitBounds([[42.01496056601005,-80.04697561296311],[42.63689134146727,-78.80635186533155]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -218,6 +219,75 @@
         });
         bounds_group.addLayer(layer_Naloxboxlocations_1);
         map.addLayer(layer_Naloxboxlocations_1);
+        function pop_Narcanlocationsdeletewhendone_2(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    for (var i in e.target._eventParents) {
+                        if (typeof e.target._eventParents[i].resetStyle === 'function') {
+                            e.target._eventParents[i].resetStyle(e.target);
+                        }
+                    }
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['longitude'] !== null ? autolinker.link(String(feature.properties['longitude']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['latitude'] !== null ? autolinker.link(String(feature.properties['latitude']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
+        }
+
+        function style_Narcanlocationsdeletewhendone_2_0() {
+            return {
+                pane: 'pane_Narcanlocationsdeletewhendone_2',
+                radius: 4.0,
+                opacity: 1,
+                color: 'rgba(35,35,35,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1,
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(32,255,120,1.0)',
+                interactive: true,
+            }
+        }
+        map.createPane('pane_Narcanlocationsdeletewhendone_2');
+        map.getPane('pane_Narcanlocationsdeletewhendone_2').style.zIndex = 402;
+        map.getPane('pane_Narcanlocationsdeletewhendone_2').style['mix-blend-mode'] = 'normal';
+        var layer_Narcanlocationsdeletewhendone_2 = new L.geoJson(json_Narcanlocationsdeletewhendone_2, {
+            attribution: '',
+            interactive: true,
+            dataVar: 'json_Narcanlocationsdeletewhendone_2',
+            layerName: 'layer_Narcanlocationsdeletewhendone_2',
+            pane: 'pane_Narcanlocationsdeletewhendone_2',
+            onEachFeature: pop_Narcanlocationsdeletewhendone_2,
+            pointToLayer: function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.circleMarker(latlng, style_Narcanlocationsdeletewhendone_2_0(feature));
+            },
+        });
+        bounds_group.addLayer(layer_Narcanlocationsdeletewhendone_2);
+        map.addLayer(layer_Narcanlocationsdeletewhendone_2);
         var osmGeocoder = new L.Control.Geocoder({
             collapsed: true,
             position: 'topleft',
@@ -228,19 +298,6 @@
         .className += ' fa fa-search';
         document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
         .title += 'Search for a place';
-        var overlaysTree = [
-            {label: '<img src="legend/Naloxboxlocations_1.png" /> Nalox box locations', layer: layer_Naloxboxlocations_1},
-            {label: "Positron (retina)", layer: layer_Positronretina_0},]
-        var lay = L.control.layers.tree(null, overlaysTree,{
-            //namedToggle: true,
-            //selectorBack: false,
-            //closedSymbol: '&#8862; &#x1f5c0;',
-            //openedSymbol: '&#8863; &#x1f5c1;',
-            //collapseAll: 'Collapse all',
-            //expandAll: 'Expand all',
-            collapsed: true,
-        });
-        lay.addTo(map);
         setBounds();
         </script>
     </body>
