--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         <script src="js/labels.js"></script>
         <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
         <script src="data/Naloxboxlocations_1.js"></script>
-        <script src="data/Narcanlocationsdeletewhendone_2.js"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -56,7 +55,7 @@
         }
         var map = L.map('map', {
             zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[42.01496056601005,-80.04697561296311],[42.63689134146727,-78.80635186533155]]);
+        }).fitBounds([[41.97555829558595,-79.98945190448114],[42.597876546141045,-78.74882815684958]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -160,8 +159,8 @@
                         <td>' + (feature.properties['Type of access'] !== null ? autolinker.link(String(feature.properties['Type of access']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <th scope="row">Indoor/outdoor</th>\
-                        <td>' + (feature.properties['Indoor/outdoor'] !== null ? autolinker.link(String(feature.properties['Indoor/outdoor']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                        <th scope="row">Location</th>\
+                        <td>' + (feature.properties['Location'] !== null ? autolinker.link(String(feature.properties['Location']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <th scope="row">Hours</th>\
@@ -194,7 +193,7 @@
         rotationOrigin: 'center center',
         icon: L.icon({
             iconUrl: 'markers/Naloxboxlocations_1.svg',
-            iconSize: [19.0, 19.0]
+            iconSize: [26.599999999999998, 26.599999999999998]
         }),
                 interactive: true,
             }
@@ -219,75 +218,6 @@
         });
         bounds_group.addLayer(layer_Naloxboxlocations_1);
         map.addLayer(layer_Naloxboxlocations_1);
-        function pop_Narcanlocationsdeletewhendone_2(feature, layer) {
-            layer.on({
-                mouseout: function(e) {
-                    for (var i in e.target._eventParents) {
-                        if (typeof e.target._eventParents[i].resetStyle === 'function') {
-                            e.target._eventParents[i].resetStyle(e.target);
-                        }
-                    }
-                    if (typeof layer.closePopup == 'function') {
-                        layer.closePopup();
-                    } else {
-                        layer.eachLayer(function(feature){
-                            feature.closePopup()
-                        });
-                    }
-                },
-                mouseover: highlightFeature,
-            });
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['longitude'] !== null ? autolinker.link(String(feature.properties['longitude']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['latitude'] !== null ? autolinker.link(String(feature.properties['latitude']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
-			layer.on('popupopen', function(e) {
-				addClassToPopupIfMedia(content, e.popup);
-			});
-			layer.bindPopup(content, { maxHeight: 400 });
-        }
-
-        function style_Narcanlocationsdeletewhendone_2_0() {
-            return {
-                pane: 'pane_Narcanlocationsdeletewhendone_2',
-                radius: 4.0,
-                opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(32,255,120,1.0)',
-                interactive: true,
-            }
-        }
-        map.createPane('pane_Narcanlocationsdeletewhendone_2');
-        map.getPane('pane_Narcanlocationsdeletewhendone_2').style.zIndex = 402;
-        map.getPane('pane_Narcanlocationsdeletewhendone_2').style['mix-blend-mode'] = 'normal';
-        var layer_Narcanlocationsdeletewhendone_2 = new L.geoJson(json_Narcanlocationsdeletewhendone_2, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_Narcanlocationsdeletewhendone_2',
-            layerName: 'layer_Narcanlocationsdeletewhendone_2',
-            pane: 'pane_Narcanlocationsdeletewhendone_2',
-            onEachFeature: pop_Narcanlocationsdeletewhendone_2,
-            pointToLayer: function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.circleMarker(latlng, style_Narcanlocationsdeletewhendone_2_0(feature));
-            },
-        });
-        bounds_group.addLayer(layer_Narcanlocationsdeletewhendone_2);
-        map.addLayer(layer_Narcanlocationsdeletewhendone_2);
         var osmGeocoder = new L.Control.Geocoder({
             collapsed: true,
             position: 'topleft',
