--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             return this._div;
         };
         title.update = function () {
-            this._div.innerHTML = '<h2>Click on the Narcan® symbols for more information &nbsp&nbsp<img src="markers/favicon-32x32.png" alt="Narcan symbol"></h2>';
+            this._div.innerHTML = '<h2>Click on the Narcan® symbols &nbsp<img src="markers/favicon-32x32.png" alt="Narcan symbol"> &nbspfor more information</h2>';
         };
         title.addTo(map);
         var abstract = new L.Control({'position':'topleft'});
