--- a/index.html
+++ b/index.html
@@ -18,12 +18,27 @@
             padding: 0;
             margin: 0;
         }
+        #image-container {
+            position: absolute;
+            top: 10px; /* Adjust top spacing as needed */
+            right: 10px; /* Adjust right spacing as needed */
+            z-index: 500; /* Ensure it's above other map elements */
+        }
+
+        #image-container img {
+            max-width: 150px; /* Adjust max width as needed */
+            height: auto;
+        }
         </style>
         <title>Click on the Narcan® symbols for more information</title>
     </head>
     <body>
         <div id="map">
         </div>
+#NOTE CHANGE HERE
+    <div id="image-container">
+        <img src="markers/CombatAddictionCHQ-logo.png" alt="CombatAddictionCHQ">
+    </div>
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
         <script src="js/L.Control.Layers.Tree.min.js"></script>
@@ -35,7 +50,10 @@
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
         <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
-        <script src="data/Naloxboxlocations_1.js"></script>
+        <script src="data/ChautauquaCountyoutline_1.js"></script>
+        <script src="data/Lakeoverlay_2.js"></script>
+        <script src="data/LakeErie_3.js"></script>
+        <script src="data/Naloxboxlocations_4.js"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -55,7 +73,7 @@
         }
         var map = L.map('map', {
             zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[42.45826222591488,-79.35711146430495],[42.49703952005049,-79.27957248007817]]);
+        }).fitBounds([[41.5221696665366,-81.29152624789401],[43.319324136460935,-77.7008107123525]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -93,8 +111,8 @@
             this.update();
             return this._div;
         };
-        title.update = function () {
-            this._div.innerHTML = '<h2>Click on the Narcan® symbols &nbsp<img src="markers/favicon-32x32.png" alt="Narcan symbol"> &nbspfor more information</h2>';
+        title.update = function () { 
+this._div.innerHTML = '<h2>Click on the Narcan® symbols &nbsp<img src="markers/favicon-32x32.png" alt="Narcan symbol"> &nbspfor more information</h2>';
         };
         title.addTo(map);
         var abstract = new L.Control({'position':'topleft'});
@@ -131,7 +149,250 @@
         });
         layer_Positronretina_0;
         map.addLayer(layer_Positronretina_0);
-        function pop_Naloxboxlocations_1(feature, layer) {
+        function pop_ChautauquaCountyoutline_1(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    for (var i in e.target._eventParents) {
+                        if (typeof e.target._eventParents[i].resetStyle === 'function') {
+                            e.target._eventParents[i].resetStyle(e.target);
+                        }
+                    }
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NAME'] !== null ? autolinker.link(String(feature.properties['NAME']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['ABBREV'] !== null ? autolinker.link(String(feature.properties['ABBREV']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['GNIS_ID'] !== null ? autolinker.link(String(feature.properties['GNIS_ID']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['FIPS_CODE'] !== null ? autolinker.link(String(feature.properties['FIPS_CODE']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['SWIS'] !== null ? autolinker.link(String(feature.properties['SWIS']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NYSP_ZONE'] !== null ? autolinker.link(String(feature.properties['NYSP_ZONE']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['POP1990'] !== null ? autolinker.link(String(feature.properties['POP1990']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['POP2000'] !== null ? autolinker.link(String(feature.properties['POP2000']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['POP2010'] !== null ? autolinker.link(String(feature.properties['POP2010']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['POP2020'] !== null ? autolinker.link(String(feature.properties['POP2020']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['DOS_LL'] !== null ? autolinker.link(String(feature.properties['DOS_LL']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['DOSLL_DATE'] !== null ? autolinker.link(String(feature.properties['DOSLL_DATE']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NYC'] !== null ? autolinker.link(String(feature.properties['NYC']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['CALC_SQ_MI'] !== null ? autolinker.link(String(feature.properties['CALC_SQ_MI']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['DATEMOD'] !== null ? autolinker.link(String(feature.properties['DATEMOD']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['Shape_Leng'] !== null ? autolinker.link(String(feature.properties['Shape_Leng']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['Shape_Area'] !== null ? autolinker.link(String(feature.properties['Shape_Area']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
+        }
+
+        function style_ChautauquaCountyoutline_1_0() {
+            return {
+                pane: 'pane_ChautauquaCountyoutline_1',
+                opacity: 1,
+                color: 'rgba(35,35,35,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 2.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(231,113,72,0.0)',
+                interactive: false,
+            }
+        }
+        map.createPane('pane_ChautauquaCountyoutline_1');
+        map.getPane('pane_ChautauquaCountyoutline_1').style.zIndex = 401;
+        map.getPane('pane_ChautauquaCountyoutline_1').style['mix-blend-mode'] = 'normal';
+        var layer_ChautauquaCountyoutline_1 = new L.geoJson(json_ChautauquaCountyoutline_1, {
+            attribution: '',
+            interactive: false,
+            dataVar: 'json_ChautauquaCountyoutline_1',
+            layerName: 'layer_ChautauquaCountyoutline_1',
+            pane: 'pane_ChautauquaCountyoutline_1',
+            onEachFeature: pop_ChautauquaCountyoutline_1,
+            style: style_ChautauquaCountyoutline_1_0,
+        });
+        bounds_group.addLayer(layer_ChautauquaCountyoutline_1);
+        map.addLayer(layer_ChautauquaCountyoutline_1);
+        function pop_Lakeoverlay_2(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    for (var i in e.target._eventParents) {
+                        if (typeof e.target._eventParents[i].resetStyle === 'function') {
+                            e.target._eventParents[i].resetStyle(e.target);
+                        }
+                    }
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(String(feature.properties['id']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
+        }
+
+        function style_Lakeoverlay_2_0() {
+            return {
+                pane: 'pane_Lakeoverlay_2',
+                opacity: 1,
+                color: 'rgba(35,35,35,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(85,176,188,1.0)',
+                interactive: false,
+            }
+        }
+        map.createPane('pane_Lakeoverlay_2');
+        map.getPane('pane_Lakeoverlay_2').style.zIndex = 402;
+        map.getPane('pane_Lakeoverlay_2').style['mix-blend-mode'] = 'normal';
+        var layer_Lakeoverlay_2 = new L.geoJson(json_Lakeoverlay_2, {
+            attribution: '',
+            interactive: false,
+            dataVar: 'json_Lakeoverlay_2',
+            layerName: 'layer_Lakeoverlay_2',
+            pane: 'pane_Lakeoverlay_2',
+            onEachFeature: pop_Lakeoverlay_2,
+            style: style_Lakeoverlay_2_0,
+        });
+        bounds_group.addLayer(layer_Lakeoverlay_2);
+        map.addLayer(layer_Lakeoverlay_2);
+        function pop_LakeErie_3(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    for (var i in e.target._eventParents) {
+                        if (typeof e.target._eventParents[i].resetStyle === 'function') {
+                            e.target._eventParents[i].resetStyle(e.target);
+                        }
+                    }
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['HYDRO_P_'] !== null ? autolinker.link(String(feature.properties['HYDRO_P_']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['UIDENT'] !== null ? autolinker.link(String(feature.properties['UIDENT']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['TYPE'] !== null ? autolinker.link(String(feature.properties['TYPE']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['COUNTRY'] !== null ? autolinker.link(String(feature.properties['COUNTRY']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NAMEEN'] !== null ? autolinker.link(String(feature.properties['NAMEEN']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NAMESP'] !== null ? autolinker.link(String(feature.properties['NAMESP']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NAMEFR'] !== null ? autolinker.link(String(feature.properties['NAMEFR']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            var content = removeEmptyRowsFromPopupContent(popupContent, feature);
+			layer.on('popupopen', function(e) {
+				addClassToPopupIfMedia(content, e.popup);
+			});
+			layer.bindPopup(content, { maxHeight: 400 });
+        }
+
+        function style_LakeErie_3_0() {
+            return {
+                pane: 'pane_LakeErie_3',
+                opacity: 1,
+                color: 'rgba(35,35,35,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(85,176,188,1.0)',
+                interactive: false,
+            }
+        }
+        map.createPane('pane_LakeErie_3');
+        map.getPane('pane_LakeErie_3').style.zIndex = 403;
+        map.getPane('pane_LakeErie_3').style['mix-blend-mode'] = 'normal';
+        var layer_LakeErie_3 = new L.geoJson(json_LakeErie_3, {
+            attribution: '',
+            interactive: false,
+            dataVar: 'json_LakeErie_3',
+            layerName: 'layer_LakeErie_3',
+            pane: 'pane_LakeErie_3',
+            onEachFeature: pop_LakeErie_3,
+            style: style_LakeErie_3_0,
+        });
+        bounds_group.addLayer(layer_LakeErie_3);
+        map.addLayer(layer_LakeErie_3);
+        function pop_Naloxboxlocations_4(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     for (var i in e.target._eventParents) {
@@ -155,7 +416,7 @@
                     </tr>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Address'] !== null ? autolinker.link(String(feature.properties['Address']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
-                    </tr>\
+                     </tr>\
                     <tr>\
                         <td colspan="2"><b>' + (feature.properties['Location'] !== null ? autolinker.link(String(feature.properties['Location']).replace(/'/g, '\'').toLocaleString()) : '') + '</b></td>\
                     </tr>\
@@ -174,38 +435,38 @@
 			layer.bindPopup(content, { maxHeight: 400 });
         }
 
-        function style_Naloxboxlocations_1_0() {
+        function style_Naloxboxlocations_4_0() {
             return {
-                pane: 'pane_Naloxboxlocations_1',
+                pane: 'pane_Naloxboxlocations_4',
         rotationAngle: 0.0,
         rotationOrigin: 'center center',
         icon: L.icon({
-            iconUrl: 'markers/Naloxboxlocations_1.svg',
+            iconUrl: 'markers/Naloxboxlocations_4.svg',
             iconSize: [26.599999999999998, 26.599999999999998]
         }),
                 interactive: true,
             }
         }
-        map.createPane('pane_Naloxboxlocations_1');
-        map.getPane('pane_Naloxboxlocations_1').style.zIndex = 401;
-        map.getPane('pane_Naloxboxlocations_1').style['mix-blend-mode'] = 'normal';
-        var layer_Naloxboxlocations_1 = new L.geoJson(json_Naloxboxlocations_1, {
+        map.createPane('pane_Naloxboxlocations_4');
+        map.getPane('pane_Naloxboxlocations_4').style.zIndex = 404;
+        map.getPane('pane_Naloxboxlocations_4').style['mix-blend-mode'] = 'normal';
+        var layer_Naloxboxlocations_4 = new L.geoJson(json_Naloxboxlocations_4, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_Naloxboxlocations_1',
-            layerName: 'layer_Naloxboxlocations_1',
-            pane: 'pane_Naloxboxlocations_1',
-            onEachFeature: pop_Naloxboxlocations_1,
+            dataVar: 'json_Naloxboxlocations_4',
+            layerName: 'layer_Naloxboxlocations_4',
+            pane: 'pane_Naloxboxlocations_4',
+            onEachFeature: pop_Naloxboxlocations_4,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.marker(latlng, style_Naloxboxlocations_1_0(feature));
+                return L.marker(latlng, style_Naloxboxlocations_4_0(feature));
             },
         });
-        bounds_group.addLayer(layer_Naloxboxlocations_1);
-        map.addLayer(layer_Naloxboxlocations_1);
+        bounds_group.addLayer(layer_Naloxboxlocations_4);
+        map.addLayer(layer_Naloxboxlocations_4);
         var osmGeocoder = new L.Control.Geocoder({
             collapsed: true,
             position: 'topleft',
