--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
     <body>
         <div id="map">
         </div>
-    <div class="floating-image">
-        <img src="markers/CombatAddictionCHQ-logo.png" alt="CombatAddictionCHQ">  </div>
+<div class="floating-image">
+    <a href="https://combataddictionchq.com">
+        <img src="markers/CombatAddictionCHQ-logo.png" alt="CombatAddictionCHQ">
+    </a>
+</div>
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
         <script src="js/L.Control.Layers.Tree.min.js"></script>
